# trading-bot

./: .env.example  .gitignore  AGENT_REVIEW.md  ARCHITECTURE_REVIEW.md  IMPROVEMENTS.md  LANGGRAPH_REVIEW.md  Makefile  PERFORMANCE.md  PRODUCTION_CHECKLIST.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  walkthrough.md
backend/: .dockerignore  Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml  task.md
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/agents/analysis_agent/: __init__.py  indicators.py
backend/app/agents/graph/: __init__.py  builder.py  state.py
backend/app/agents/interfaces/: __init__.py  base.py  decision_agent.py  execution_agent.py  insight_agent.py  market_agent.py  memory_agent.py  news_agent.py  portfolio_agent.py  reflection_agent.py  risk_agent.py  technical_agent.py
backend/app/agents/nodes/: __init__.py  decision_node.py  execution_node.py  insight_node.py  market_node.py  memory_node.py  news_node.py  portfolio_node.py  reflection_node.py  risk_node.py  technical_node.py  trade_reflection_node.py
backend/app/agents/prompts/: __init__.py  templates.py
backend/app/agents/risk_agent/: __init__.py  rules.py
backend/app/agents/trading_agent/: __init__.py  graph.py  prompts.py
backend/app/api/middleware/: exception_handler.py  logging_middleware.py
backend/app/api/v1/: __init__.py
backend/app/core/: config.py  constants.py  dependencies.py  exceptions.py  logging.py  security.py
backend/app/domain/enums/: __init__.py  trading.py  user.py
backend/app/domain/models/: __init__.py  alert.py  base.py  market_data.py  memory.py  order.py  polymarket.py  portfolio.py  strategy.py  user.py
backend/app/domain/schemas/: __init__.py  auth.py  common.py  market_data.py  paper_trading.py  polymarket.py  strategy.py  trading.py  user.py
backend/app/infrastructure/cache/: redis_client.py
backend/app/infrastructure/database/: session.py
backend/app/infrastructure/exchange/: __init__.py  base.py  binance.py  bybit.py  ccxt_client.py  factory.py  hyperliquid.py  okx.py  paper.py
backend/app/infrastructure/messaging/: websocket_manager.py
backend/app/infrastructure/repositories/: __init__.py  base.py  market_data_repository.py  memory_repository.py  order_repository.py  polymarket_repository.py  portfolio_repository.py  user_repository.py
backend/app/services/: __init__.py
backend/app/services/auth/: __init__.py  auth_service.py
backend/app/services/embedding/: embedding_service.py
backend/app/services/market_data/: __init__.py  market_data_service.py
backend/app/services/paper_trading/: engine.py  fees.py  risk_metrics.py  slippage.py
backend/app/services/polymarket/: __init__.py  polymarket_service.py
backend/app/services/portfolio/: portfolio_service.py
backend/app/services/trading/: __init__.py  order_service.py
backend/app/services/users/: user_service.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: market_data_tasks.py  notification_tasks.py  trading_tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_paper_trading.py  0003_long_term_memory.py  0004_polymarket_snapshots.py
backend/scripts/: seed_db.py
backend/tests/: conftest.py
backend/tests/integration/: test_docker_config.py
backend/tests/integration/api/: test_auth_endpoints.py  test_polymarket_api.py
backend/tests/unit/agents/: test_decision_agent.py  test_execution_agent.py  test_insight_agent.py  test_langgraph.py  test_market_agent.py  test_memory_agent.py  test_portfolio_agent.py  test_risk_agent.py  test_technical_analysis.py
backend/tests/unit/domain/: test_models.py
backend/tests/unit/services/: test_auth_service.py  test_exchange_layer.py  test_exchange_mock.py  test_indicators.py  test_memory.py  test_polymarket_service.py  test_trade_reflection.py
(+80 files in other folders)
