[project]
name = "crypto-trader-backend"
version = "0.1.0"
description = "Autonomous AI Crypto Trading Platform — Backend"
readme = {text = "Backend", content-type = "text/plain"}
requires-python = ">=3.13, <3.14"
license = { text = "MIT" }
authors = [{ name = "CryptoTrader AI Team" }]

dependencies = [
    # ── Web Framework ─────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",

    # ── Data Validation ───────────────────────────────────────────────────────
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # ── Database / ORM ────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",

    # ── Cache / Messaging ─────────────────────────────────────────────────────
    "redis[hiredis]>=5.2.0",
    "celery[redis]>=5.4.0",
# "redbeat>=2.2.0",

    # ── Auth ──────────────────────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # ── AI / LLM ──────────────────────────────────────────────────────────────
    "anthropic>=0.40.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-community>=0.3.0",

    # ── Exchange APIs ─────────────────────────────────────────────────────────
    "ccxt>=4.4.0",

    # ── Logging ───────────────────────────────────────────────────────────────
    "loguru>=0.7.2",

    # ── Async ─────────────────────────────────────────────────────────────────
    "anyio>=4.6.0",
    "aiofiles>=24.1.0",

    # ── Monitoring ────────────────────────────────────────────────────────────
    "prometheus-fastapi-instrumentator>=7.0.0",

    # ── Utilities ─────────────────────────────────────────────────────────────
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "orjson>=3.10.0",
    "arrow>=1.3.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "ta-lib>=0.4.32",
    "email-validator>=2.0.0",
    "pgvector>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.1",
    "faker>=30.0.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "types-redis>=4.6.0.20241004",
    "types-passlib>=1.7.7.20240819",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]


[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # bugbear
    "SIM",      # simplify
    "TCH",      # type-checking imports
    "RUF",      # ruff-specific
]
ignore = [
    "E501",
    "B008",
    "B904",
    "F401",
    "F811",
    "I001",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF012",
    "SIM114",
    "TC001",
    "TC002",
    "TC003",
    "UP046",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
